<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/search">
        <menu>
            <group
                android:id="@+id/menu_find"
                android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_college"
                    android:icon="@drawable/ic_college"
                    android:title="@string/college" />
                <item
                    android:id="@+id/nav_hostel"
                    android:icon="@drawable/ic_hostel"
                    android:title="@string/hostel" />
                <item
                    android:id="@+id/nav_foods"
                    android:icon="@drawable/ic_foods"
                    android:title="@string/foods" />
            </group>
        </menu>
    </item>

    <item android:title="@string/user">
        <menu>
            <group android:id="@+id/menu_user"
                android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_man_user"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/communication">
        <menu>
            <group
                android:id="@+id/menu_communication"
                android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_feedback"
                    android:icon="@drawable/ic_feedback"
                    android:title="@string/feedback" />
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_share"
                    android:title="@string/share"/>
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/about" />
            </group>
        </menu>
    </item>

</menu>
