<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.project.smit.makemyplace.Activity.Login"
    android:background="@drawable/bg_b">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:id="@+id/ivFavicon"
        android:src="@drawable/logo"
        android:contentDescription="@string/favicon"
        android:translationZ="2dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cvField"
        app:cardCornerRadius="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llField"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/etUsername"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textSize="15sp"
                android:drawableStart="@drawable/ic_mail_outline"
                android:drawablePadding="5dp"
                android:background="@color/txtBtn"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#607D8B"
                android:layout_gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/etPassword"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:inputType="textPassword"
                android:hint="@string/pwd"
                android:textSize="15sp"
                android:drawableEnd="@drawable/ic_view"
                android:drawableStart="@drawable/ic_lock_outline"
                android:drawablePadding="5dp"
                android:background="@color/txtBtn"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:textColor="@color/txtBtn"
        android:background="@drawable/button"
        android:elevation="4dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:background="#607D8B"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/btnGLogin"
        android:text="@string/login_with_google"
        android:textSize="12sp"
        android:textColor="@color/txtBtn"
        android:drawableStart="@drawable/ic_google_plus"
        android:background="@drawable/g_button"
        android:elevation="4dp"
        android:visibility="gone"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:id="@+id/btnFLogin"
        android:maxLines="1"
        android:text="@string/login_with_facebook"
        android:textSize="12sp"
        android:textColor="@color/txtBtn"
        android:drawableStart="@drawable/ic_facebook"
        android:background="@drawable/fb_button"
        android:elevation="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:id="@+id/tvForget"
            android:text="@string/forget"
            android:textAlignment="center"
            android:textColor="@color/txtBtn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:id="@+id/tvRegister"
            android:text="@string/new_user"
            android:textAlignment="center"
            android:textColor="@color/txtBtn"/>

    </LinearLayout>

</LinearLayout>
