<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_View="http://schemas.android.com/apk/res-auto"
    tools:context="com.project.smit.makemyplace.Activity.Registration"
    android:scrollbars="none"
    android:background="@drawable/bg_b">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cvField"
            android:layout_marginTop="95dp"
            android:elevation="4dp"
            card_View:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/llField"
                android:background="@color/txtBtn"
                android:orientation="vertical"
                android:paddingTop="35dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etFname"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:hint="@string/fname"
                        android:inputType="textNoSuggestions"
                        android:textSize="15sp"
                        android:maxLines="1"
                        android:imeOptions="actionNext"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etLname"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:hint="@string/lname"
                        android:inputType="textNoSuggestions"
                        android:textSize="15sp"
                        android:maxLines="1"
                        android:imeOptions="actionNext"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etEmail"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textSize="15sp"
                        android:maxLines="1"
                        android:imeOptions="actionNext"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etPassword"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:hint="@string/pwd"
                        android:inputType="textPassword"
                        android:textSize="15sp"
                        android:maxLines="1"
                        android:imeOptions="actionNext"
                        android:drawableEnd="@drawable/ic_view"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etConfirm"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:hint="@string/confirmpwd"
                        android:inputType="textPassword"
                        android:textSize="15sp"
                        android:maxLines="1"
                        android:imeOptions="actionNext"
                        android:drawableEnd="@drawable/ic_view"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etMobile"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:hint="@string/mobile"
                        android:inputType="number"
                        android:textSize="15sp"
                        android:maxLines="1"
                        android:maxLength="10"
                        android:imeOptions="actionDone"/>
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:weightSum="3">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:id="@+id/tvGender"
                        android:text="@string/gender"
                        android:textSize="16sp"
                        android:textColor="@color/txtText"/>
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:id="@+id/rgGender"
                        android:orientation="horizontal">
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/rbMale"
                            android:checked="true"
                            android:drawableEnd="@drawable/ic_man"
                            android:textColor="@color/txtText"/>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:id="@+id/rbFemale"
                            android:drawableEnd="@drawable/ic_woman"
                            android:textColor="@color/txtText"/>
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cvField"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:id="@+id/btnSubmit"
            android:text="@string/sign_up"
            android:textColor="@color/txtBtn"
            android:background="@drawable/button"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@id/cvField"
            android:layout_marginTop="-40dp"
            android:translationZ="2dp"
            android:elevation="4dp"
            android:id="@+id/rlProfile">
            <com.project.smit.makemyplace.MakeMyPlace.RoundedImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/ivProfile"
                android:contentDescription="@string/pp"/>
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignBottom="@id/ivProfile"
                android:layout_alignEnd="@id/ivProfile"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:paddingTop="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:src="@drawable/ic_camera_white"
                android:contentDescription="@string/camera"
                android:background="@drawable/circle"/>
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>
