<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.smit.makemyplace.Activity.ChangePassword"
    android:background="@drawable/bg_b">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etCurrent"
                    android:hint="@string/current"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:drawableEnd="@drawable/ic_view"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etNew"
                    android:hint="@string/new_pwd"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:drawableEnd="@drawable/ic_view"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etConfirm"
                    android:hint="@string/confirmpwd"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:drawableEnd="@drawable/ic_view"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_gravity="center"
                android:id="@+id/btnChange"
                android:text="@string/change_password"
                android:textColor="@color/txtBtn"
                android:background="@drawable/button"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
