<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_margin="20dp">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/llForgot"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvTitle"
                android:text="@string/logout"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_logout"
                android:drawablePadding="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvMessage"
                android:text="@string/are_you_sure_you_want_to_logout"
                android:textSize="15sp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:id="@+id/btnYes"
                android:text="Yes, I want to logout"
                android:textColor="@color/txtBtn"
                android:background="@drawable/button"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/ivCancel"
        android:src="@drawable/ic_cancel"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="-10dp"
        android:layout_alignTop="@id/llForgot"
        android:layout_alignEnd="@id/llForgot"
        android:translationZ="2dp"
        android:contentDescription="@string/cancel"/>

</RelativeLayout>